# opengenomebrowser

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  _config.yml  development.env  docker-compose-development.yaml  docker-compose-production.yaml  index.md  init.sh  installation.md  installation_annotation-descriptions.md  installation_orthologs.md  installation_pathway-maps.md  manage.py  production.env  pyproject.toml  requirements.txt  start.sh  tutorial.md  tutorial_genomes.md
OpenGenomeBrowser/: apps.py  login_required_middleware.py  settings.py  settings_template.py  urls.py  wsgi.py
_includes/: head.html
db_setup/: FolderLooper.py  GenomeLooper.py  MemberLooper.py  __init__.py  check_metadata.py  import_database.py  init_orthofinder.py  make_blast_dbs.py  manage_ogb.py  query.txt  remove_tasks.py  wait_for_postgres.py  wait_for_version_match.py
docker-production-template/: docker-compose-production-template.yaml  production-template.env
docker-production-template/nginx/: Dockerfile  nginx.conf
installation/: annotation-descriptions.md  orthologs.md  pathway-maps.md
lib/ani/: GenDisCal  fast_ani_wrapper.py  gendiscal_wrapper.py  orthoani_wrapper.py  orthoaniu_wrapper.py
lib/assembly_stats/: __init__.py  assembly_stats.py  how_to_build.txt
lib/color_generator/: 300_different_colors.txt  ColorGenerator.py  test_ColorGenerator.py
lib/django_template_increment_counter/: Counter.py
lib/dot/: DotPrep.py  dot_prep_wrapper.py
lib/gene_ontology/: gene_ontology.py
lib/genome_similarity/: fast_ani_wrapper.py  gendiscal_wrapper.py  orthoani_wrapper.py  orthoaniu_wrapper.py
lib/ncbi_blast/: update.sh
lib/ogb_cache/: ogb_cache.py
lib/ortho_ani/: fastANI  fast_ani_wrapper.py  ortho_ani_wrapper.py  source.txt
lib/orthofinder/: install_orthofinder.py  orthofinder.py
lib/subcellular_locations/: go_to_sl.py  uniprotkb_sl2go
lib/tax_id_to_color/: 300_different_colors.txt  glasbey_wrapper.py
media/: admin.apng  annotation-search.apng  blast.apng  gene-trait-matching.apng  genome-detail.apng  genomes.apng  magic-strings.apng  pathways.apng  trees.apng
nginx/: nginx.conf
nginx/certs/: nginx-selfsigned.key
plugins/: __init__.py  calculate_blast.py  calculate_dotplot.py  calculate_gendiscal.py  calculate_orthofinder.py
templates/registration/: login.html
tutorials/: admin.md  annotation-search.md  blast.md  compare-genes.md  dotplot.md  gene-trait-matching.md  gene.md  genome.md  genomes.md  magic-strings.md  pathway.md  trees.md
website/: admin.py  context_processors.py  tasks.py  urls.py
website/admin/: AdminActions.py  GenomeAdmin.py  GenomeUpload.py  MarkdownEditor.py  MarkdownObject.py  OgbAdminSite.py  OrganismAdmin.py  TagAdmin.py  TaxIdAdmin.py  __init__.py  admin.py
website/migrations/: 0001_initial.py  0002_auto_20210107_1605.py  0003_auto_20210119_0921.py  0004_auto_20210209_1645.py  0005_auto_20210211_1702.py  0006_coregenomedendrogram_message.py  0007_auto_20210413_0536.py  0008_auto_20210423_1229.py  0009_auto_20210511_1024.py  0010_auto_20210702_1256.py  0011_auto_20210702_1258.py  0012_alter_organism_name.py  0013_genome_cog.py  0014_alter_genomecontent_ani_similarity.py
website/models/: ANI.py  Annotation.py  CoreGenomeDendrogram.py  Gene.py  Genome.py  GenomeContent.py  GenomeSerializer.py  GenomeSimilarity.py  KeggMap.py  Member.py  MemberSerializer.py  Organism.py  OrganismSerializer.py  PathwayMap.py  Strain.py  StrainSerializer.py  Tag.py  TaxID.py  Tree.py  __init__.py
website/serializers/: GenomeSerializer.py  OrganismSerializer.py  __init__.py  rest_serializers.py
website/templatetags/: ogb_tags.py
website/views/: AnnotationDetailView.py  AnnotationFilter.py  AnnotationSearch.py  Api.py  Blast.py  ClickMenu.py  CompareGenes.py  Dotplot.py  Download.py  Downloader.py  Files.py  (+24 more)
(+131 files in other folders)
