[tool.poetry]
name = "opengenomebrowser"
version = "0.1.0"
description = "OpenGenomeBrowser: A dynamic and scalable web platform for comparative genomics"
authors = ["opengenomebrowser <thomas.roder@bioinformatics.unibe.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fire = "^0.4.0"
glacier = "^0.3.1"
Django = "^3.2.7"
django-mptt = "^0.13.2"
djangorestframework = "^3.12.4"
django-prettyjson = "^0.4.1"
huey = "^2.4.0"
uWSGI = "^2.0.19"
psycopg2-binary = "^2.9.1"
psutil = "^5.8.0"
pure-cdb = "^3.1.1"
pandas = "^1.3.2"
scipy = "^1.7.1"
statsmodels = "^0.12.2"
progressbar2 = "^3.53.1"
dictdiffer = "^0.9.0"
beautifulsoup4 = "^4.10.0"
biopython = "^1.79"
biotite = "^0.30.0"
plotly = "^5.3.1"
dna-features-viewer = "^3.0.3"
bokeh = "^2.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
