[tool.poetry]
name = "opengenomebrowser"
version = "0.1.0"
description = "OpenGenomeBrowser: A dynamic and scalable web platform for comparative genomics"
authors = ["opengenomebrowser <thomas.roder@bioinformatics.unibe.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fire = "^0.4.0"
Django = "^5.0.4"
django-mptt = "^0.13.2"
djangorestframework = "^3.12.4"
django-prettyjson = "^0.4.1"
huey = "^2.4.0"
uWSGI = "^2.0.19"
psycopg2-binary = "^2.9.1"
psutil = "^5.8.0"
pure-cdb = "^3.1.1"
pandas = "^1.3.2"
scipy = "^1.7.1"
statsmodels = "^0.13.1"
progressbar2 = "^3.53.1"
colorama = "^0.4.4"
dictdiffer = "^0.9.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"
biopython = "^1.79"
biotite = "^0.33.0"
plotly = "^5.3.1"
bokeh = "^3.0.0"
opengenomebrowser-tools = {git = "https://github.com/opengenomebrowser/opengenomebrowser-tools.git"}
dot = {git = "https://github.com/MrTomRod/dot"}
ncbi-blast = {git = "https://github.com/MrTomRod/ncbi-blast.git"}
gene-loci-comparison = {git = "https://github.com/MrTomRod/gene-loci-comparison.git"}
flower-plot = {git = "https://github.com/MrTomRod/flower-plot.git"}
fast-fisher = "^0.0.4"
gendiscalpy = {git = "https://github.com/MrTomRod/gendiscalpy"}
dna-features-viewer = {git = "https://github.com/MrTomRod/DnaFeaturesViewer.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
